--- a/contactanos.html
+++ b/contactanos.html
@@ -24,6 +24,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="nosotros.html">Nosotros</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contactanos.html">Contacto</a>
+                  </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Adopta un peludo
@@ -45,7 +48,7 @@
                 </form>
               </div>
             </div>
-          </nav>
+        </nav>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
