--- a/gatos.html
+++ b/gatos.html
@@ -24,6 +24,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="nosotros.html">Nosotros</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contactanos.html">Contacto</a>
+                  </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Adopta un peludo
