--- a/contactanos.html
+++ b/contactanos.html
@@ -38,9 +38,6 @@
                       <li><a class="dropdown-item" href="#">Otros</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                  </li>
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -49,6 +46,51 @@
               </div>
             </div>
         </nav>
+        <nav class="navbar navbar-light bg-light">
+          <div class="container-fluid">
+            <div class="alert alert-dark" role="alert">
+              contactanos
+            </div>
+          </div>
+        </nav>
+        <div class="row">
+        <div class="col">
+          <h1>Ingreso De Datos</h1>
+          <form>
+            <div class="form-group">
+            <label for="nombre">Tu Nombre (requerido)</label>
+            <input type="text" class="form-control" id="nombre">
+            </div>
+            <div class="form-group">
+            <label for="correo">Tu Correo electronico (requerido) </label>
+            <input type="text" class="form-control" id="correo">
+            </div>
+            <div class="form-group">
+            <label for="asunto">Tu Asunto</label>
+            <input type="text" class="form-control" id="asunto">
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label">Tu Mensaje</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <button type="submit"class="btn btn-dark" >Quiero Informacion!</button>
+          </form>
+        </div>
+        <div class="col">
+        <h1>Emails:</h1>
+        <p>General: contacto@garrasypatas.cl</p>
+        <p>Relaciones Públicas: difusion@garrasypatas.cl</p>
+        <p>Voluntarios: voluntarios@garrasypatas.cl</p>
+        <p>Socios:  socios@garrasypatas.cl</p>
+        <p>Hogares Temporales: hogarestemporales@garrasypatas.cl</p>
+        <p>Donaciones: donaciones@garrasypatas.cl</p>
+        <p>Donaciones: donaciones@garrasypatas.cl</p>
+        <p>Eventos Solidarios y Corona de Caridad: eventos@garrasypatas.cl</p>
+        <p>Traslados: traslados@garrasypatas.cl</p>
+        <p>Padrinos: padrinos@garrasypatas.cl</p>
+        <p>Compra de Merchandising: ventas@garrasypatas.cl</p>
+        </div>
+      </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
