--- a/nosotros.html
+++ b/nosotros.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="./mystyle.css">
+    <link rel="stylesheet" href="styleicon.css\fonts\style.css">
     <title>Nosotros</title>
 </head>
-<body>
+<body id="body">
     <div class="container">
         <!--Nanbar  -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -38,9 +39,6 @@
                       <li><a class="dropdown-item" href="#">Otros</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                  </li>
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -51,52 +49,88 @@
           </nav>
           <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
-              <span class="navbar-text">
-                Nosotros
-              </span>
-            </div>
-          </nav>
-          <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-            <div class="card text-center" style="width: 18rem;">
-              <div class="card h-100">
-                <img src="https://images6.alphacoders.com/969/thumb-1920-969184.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
+              <div class="alert alert-dark" role="alert">
+                nosotros
               </div>
             </div>
+          </nav>
+          <div class="card-group">
+            <div class="card text-center" style="width: 18rem;">
+              <div class="card-body">
+                <h1><span class="icon-star-full"></span></h1>
+                <h5 class="card-title">QUIENES SOMOS </h5>
+                <p class="card-text">Somos una fundación protectora de animales legalmente constituida en Santiago de Chile, que surge de la necesidad de proteger a animales domésticos en situación de maltrato o abandono, y busca desarrollar una cultura de protección activa de la vida animal.</p>
+                <a href="#" class="btn btn-primary">Ver mas</a>
+              </div>
             </div>
-            <div class="col">
-                <div class="card text-center" style="width: 18rem;">
-                  <div class="card h-100">
-                    <img src="https://images6.alphacoders.com/969/thumb-1920-969184.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                  </div>
+            <div class="card text-center" style="width: 18rem;">
+              <div class="card-body">
+                <h1><span class="icon-man-woman"></span></h1>
+                <h5 class="card-title">EQUIPO</h5>
+                <p class="card-text">Nuestro equipo está compuesto por personas que se distinguen por creer en algo y trabajar activamente, sin remuneración, para conseguirlo. Donan su tiempo, sus capacidades, sus conocimientos y habilidades a una causa que les preocupa, convirtiéndose así en un agente de cambio.</p>
+                <a href="#" class="btn btn-primary">Ver mas</a>
+              </div>
+            </div>
+            <div class="card text-center" style="width: 18rem;">
+              <div class="card-body">
+                <h1><span class="icon-checkmark2"></span></h1>
+                <h5 class="card-title">Auspiciadores</h5>
+                <p class="card-text">Gran parte de nuestro programa de rescate, rehabilitación, recuperación y promoción de la adopción animal, es posible gracias a una serie de auspiciadores que creen y apoyan esta causa bajo distintos medios. Esta red está conformada empresas, organizaciones e instituciones.</p>
+                <a href="#" class="btn btn-primary">Ver mas</a>
+              </div>
+            </div>
+          </div>
+            <div class="card-group">
+              <div class="card text-center" style="width: 18rem;">
+                <div class="card-body">
+                  <h1><span class="icon-heart"></span></h1>
+                  <h5 class="card-title">Colaboradores</h5>
+                  <p class="card-text">Existen personas que, conmovidas por esta labor, se han acercado a nosotros de forma voluntaria para ofrecer su ayuda desde su oficio o profesión. Es así como hoy contamos con fotógrafos profesionales, diseñadores y veterinarios comprometidos con ayudar y apoyar esta causa con tanto ímpetu como nosotros.</p>
+                  <a href="#" class="btn btn-primary">Ver mas</a>
                 </div>
+              </div>
+              <div class="card text-center" style="width: 18rem;">
+                <div class="card-body">
+                  <h1><span class="icon-table2"></span></h1>
+                  <h5 class="card-title">Quiénes somos</h5>
+                  <p class="card-text">En Fundación Garras y Patas estamos convencidos que para promover el rescate y adopción animal es necesario hacerse ver: salir a la calle, buscar instancias, encontrar nuevas vitrinas y generar instancias en donde nos demos a conocer, y potenciales familias conozcan a nuestros rescatados.</p>
+                  <a href="#" class="btn btn-primary">Ver mas</a>
                 </div>
-                <div class="col">
-                    <div class="card text-center" style="width: 18rem;">
-                        <div class="card-body">
-                          <h5 class="card-title">Special title treatment</h5>
-                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col-sm-6">
-                          <div class="card">
-                            <div class="card-body">
-                              <h5 class="card-title">Special title treatment</h5>
-                              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                          </div>
-                        </div>
+              </div>
+              <div class="card text-center" style="width: 18rem;">
+                <div class="card-body">
+                  <h1><span class="icon-bullhorn"></span></h1>
+                  <h5 class="card-title">Prensa</h5>
+                  <p class="card-text">Esta labor no es nada si no se comunica. Es por eso, que cada aparición de Fundación Garras y Patas en los medios de comunicación, es muy valiosa desde el punto de vista de la promoción de la adopción, la captación de voluntarios nuevos y de socios y empresas que quieran unirse a esta labor.</p>
+                  <a href="#" class="btn btn-primary">Ver mas</a>
+                </div>
+              </div>
+          </div>
+            <div class="card-group">
+              <div class="card text-center" style="width: 18rem;">
+                <div class="card-body">
+                  <h1><span class="icon-video-camera"></span></h1>
+                  <h5 class="card-title">Videos</h5>
+                  <p class="card-text">Conoce más de nuestra labor mediante los distintos videos que hemos hecho.</p>
+                  <a href="#" class="btn btn-primary">Ver mas</a>
+                </div>
+              </div>
+              <div class="card text-center" style="width: 18rem;">
+                <div class="card-body">
+                  <h1><span class="icon-camera"></span></h1>
+                  <h5 class="card-title">Galería de Fotos</h5>
+                  <p class="card-text">Conoce nuestras galerías de fotos de nuestros rescates, jornadas de adopción, eventos, acciones y otras iniciativas que llevamos a cabo.</p>
+                  <a href="#" class="btn btn-primary">Ver mas</a>
+                </div>
+              </div>
+              <div class="card text-center" style="width: 18rem;">
+                <div class="card-body">
+                  <h1><span class="icon-file-text2"></span></h1>
+                  <h5 class="card-title">Noticias</h5>
+                <p class="card-text">Siempre estamos haciendo acciones que merecen ser conocidas. Conoce acá nuestras últimas iniciativas, rescates y logros conseguidos y que te queremos contar.</p>
+                <a href="#" class="btn btn-primary">Ver mas</a>
+                </div>
+              </div>
           </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
